--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "homepage": "https://github.com/abhishek029/Patel_A_ChatApp#readme",
   "dependencies": {
     "express": "^4.16.4",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "vue-toasted": "^1.1.26",
+    "vuetify-toast-snackbar": "^0.1.6"
   }
 }
